# syntalix-orion

./: .ansible-lint  .gitignore  AGENTS.md  ARBOL_DIRECTORIOS.md  AUDITORIA_V2.md  IMPROVEMENTS.md  INFORME_ANALISIS.md  INFORME_MEJORAS.md  LICENSE  README.md  ansible.cfg  aplicaciones.yml  apps_metadata.py  check_auto_generate.py  commit_message.txt  commit_msg.txt  descripcion.txt  fix.py  fix_permissions.sh  inventory.ini  main.py  patch.py  playbook.yml  pyproject.toml  redeploy.sh  requirements.yml  setup.sh  site.yml  test.txt  test.yml  test_ansible.py  test_eval.py  test_jinja.py  test_jinja.yml  test_playbook.yml  test_render.py  test_skip.yml  uninstall.sh  vars.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
Orion-Python-Ansible/: requirements.txt
Orion-Python-Ansible/scripts/: checks.py  constants.py  deploy.py  generator.py  main.py  preflight.py  (+4 more)
Skills/: DevOps_Skill_Framework
aplicaciones.d/: 00-infra.yml  01-apps.yml
docs/: ARCHITECTURE.md  CONFIG_DEPLOY.md  DIAGRAMA_TUI.md  DIAGRAMA_TUI_FLUJO.md  HARDENING.md  INFORME_ANALISIS.md  MIGRATION_NOTES.md  PHASE2_MIGRATION.md  PHASE2_MIGRATION_BADGES.md  PLAN_ANSIBLE_RUNNER_REAL.md  PR_CHECKLIST.md  PR_V2_Migration_Body.md  TROUBLESHOOTING.md  TROUBLESHOOTING_CHATWOOT.md  V2_ARCHITECTURE.md
engine/: ansible_runner.py  ansible_runner_real.py
logs/: .gitkeep
roles/: README.md
scripts/: cleanup_installer.py  pytest.ini
tests/: __init__.py  conftest.py  dep_graph_test.py  test_apps_metadata.py  test_dependency_graph.py  test_models.py  test_preflight.py  test_security.py  test_state.py  test_tui.py
(+225 files in other folders)
